--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,11 @@
 title: Santiago Chou
 email: xfzhou2018@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Wellcome to my blog!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://santiagochou.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: shawncheeer
+github_username:  santiagochou
 
 # Build settings
 theme: minima
