--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,18 @@ github_username:  santiagochou
 # Fields minima uses, but are not defaulted with jekyll new command.
 # Author is the default for posts, the Atom feed, and is used in the footer
 author: Santiago Chou
+
+# New fields not defaulted by jekyll-new with minima theme
+# Add a copyright. A copyright symbol and year will be added automatically
+# copyright: Company, Inc.
+copyright: "Santiago"
+
+# title-logo is new field that, when used, displays a logo
+# instead of custom text. Ideally, image is 50px high and takes up
+# minimal horizontal space. Tested with a new root "images" folder e.g.:
+# title-logo: /images/my-logo.png (or JPG, etc.)
+title-logo: /images/title-logo.png
+
 # Build settings
 # Removed minima theme as it is now a regular theme.
 #theme: minima
