--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: La Casa de Santiago
 email: xfzhou2018@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Wellcome to my blog!
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://santiagochou.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: shawncheeer
 github_username:  santiagochou
