--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,9 @@ copyright: "Santiago"
 plugins:
   - jekyll-feed
 
+## Santiago add at Jan 5, 2021
+markdown: kramdown
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
