--- a/_config.yml
+++ b/_config.yml
@@ -45,9 +45,8 @@ copyright: "Santiago"
 # Build settings
 # Removed minima theme as it is now a regular theme.
 #theme: minima
-plugins_dir:
+plugins:
   - jekyll-feed
-  - jekyll-spaceship
 
 ## Santiago add at Jan 5, 2021
 markdown: kramdown
